Add grid toggle

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
       <div id="map"></div>
       <div id="img"></div>
       <div id="hist"></div>
+      <div id="grid-toggle">Toggle Grid</div>
       <!-- Content goes inside #site-canvas -->
     </div>
 
